<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leaderboard"
    android:background="@color/lightBackground">

    <TextView
        android:id="@+id/LeaderBoardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/leaderboardTitle"
        android:textColor="@color/lightTitle"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TableLayout for displaying the leaderboard -->
    <TableLayout
        android:id="@+id/leaderboardTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/LeaderBoardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BackButton">

        <!-- Header row for column titles -->
        <TableRow>
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:padding="8dp"
                android:text="@string/rankHeader"
                android:textAlignment="center"
                android:textColor="@color/ButtonLight"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/usernameHeader"
                android:textAlignment="center"
                android:textColor="@color/ButtonLight"
                android:textStyle="bold" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="8dp"
                android:text="@string/high_scoreHeader"
                android:textAlignment="center"
                android:textColor="@color/ButtonLight"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/BackButton"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/backBtn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>