<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground"
    tools:context=".Settings">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/settingsTitle"
        android:textColor="@color/lightTitle"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pfpImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/pfp_frame"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTitle"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/AccountBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/pfpImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PasswordChangeBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/AccountBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/HelpBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="HELP"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/PasswordChangeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/NotificationBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/HelpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LanguageBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/language"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/NotificationBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
