<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/lightBackground"
    tools:context=".PasswordChange">

    <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/change_password"
        android:textColor="@color/lightTitle"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_text_field"
        android:drawablePadding="10dp"
        android:hint="Current Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/SettingsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="210dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_text_field"
        android:drawablePadding="10dp"
        android:hint="New Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/currentPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/custom_text_field"
        android:drawablePadding="10dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/ButtonLight"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:backgroundTint="#274001"
        android:text="@string/backBtn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="14dp"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>